--- a/package.yaml
+++ b/package.yaml
@@ -27,7 +27,7 @@ dependencies:
 executables:
   atcoder-fib-exe:
     main:                Main.hs
-    source-dirs:         app
+    source-dirs:         src
     ghc-options:
     - -threaded
     - -rtsopts
